[package]
name = "mega-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mega-dl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
cbc = "0.1"
cipher = "0.4"
anyhow = "1"
futures = "0.3"
indicatif = "0.17"
rand = "0.8"
bytes = "1"
libc = "0.2"
